# GenStorBOSSE

./: pyproject.toml
GenStorBOSSE/: pvscm_nrel_bess_model.py
GenStorBOSSE/.ipynb_checkpoints/: pvscm_nrel_bess_model-checkpoint.py
configs/: 100MW_4h_battery.yaml  60MW_2h_battery_no_interconnection.yaml
configs/.ipynb_checkpoints/: 100MW_4h_battery-checkpoint.yaml
examples/: example_bess.ipynb
